typescript/checker/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            39,
        ),
        hi: BytePos(
            50,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts:3:5
  |
3 |     [e]: number 
  |     ^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            40,
        ),
        hi: BytePos(
            41,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts:3:6
  |
3 |     [e]: number 
  |      ^

